[package]
name = "lightsaber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# --- All projects
# - Error handling 
eyre = "0.6.8"
color-eyre = "0.6"
# - Logging 
tracing = "0.1.35"

# --- Project-specific
# - Web and HTTP 
# yew = "0.19.3"
# tokio = "1.20.1"
# reqwest = "0.11.11"
# - Concurrency 
# rayon = "1.5.3"
# - Command line 
# text_io = "0.1.12"
# clap = "3.2.15"
# - Database 
# sqlx = "0.6.0"
# - Date and time 
# chrono = "0.4.19"
